--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <picture>
           <source srcset="images/image-header-mobile.jpg" media="(max-width:1021px)">
           <img src="images/image-header-desktop.jpg" alt="">
+          <span class="overlay"></span>
         </picture>
-        <div class="overlay"></div>
       </div>
     </div>
   </main>  
