--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <picture>
           <source srcset="images/image-header-mobile.jpg" media="(max-width:1021px)">
           <img src="images/image-header-desktop.jpg" alt="">
-          <span class="overlay"></span>
+          <div class="overlay"></div>
         </picture>
       </div>
     </div>
